--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set(PCRE2_SUPPORT_LIBREADLINE OFF CACHE BOOL "Enable support for linking pcre2te
 FetchContent_Declare(
   pcre2posix
   GIT_REPOSITORY https://github.com/PCRE2Project/pcre2.git
-  GIT_TAG        bf50eeef64fc4f5ddfc93a041e2f4d7357f3c431
+  GIT_TAG        pcre2-10.45
   GIT_SHALLOW    TRUE
 
   
@@ -57,7 +57,7 @@ FetchContent_MakeAvailable(pcre2posix)
 ############### file
 set(FILE_VERSION 5.46)
 FetchContent_Populate(
-  file_magic
+  libmagic
   QUIET
   GIT_REPOSITORY https://github.com/file/file.git
   GIT_TAG        7b4417cc8bae378c33f5e72148bc706571032580
@@ -68,96 +68,96 @@ FetchContent_Populate(
 
 
 set(WIN_COMPAT_SOURCES 
-  ${file_magic_SOURCE_DIR}/src/asctime_r.c
-  ${file_magic_SOURCE_DIR}/src/asprintf.c
-  ${file_magic_SOURCE_DIR}/src/ctime_r.c
-  ${file_magic_SOURCE_DIR}/src/dprintf.c
-  ${file_magic_SOURCE_DIR}/src/getline.c
-  ${file_magic_SOURCE_DIR}/src/gmtime_r.c
-  ${file_magic_SOURCE_DIR}/src/localtime_r.c
-  ${file_magic_SOURCE_DIR}/src/pread.c
-  ${file_magic_SOURCE_DIR}/src/strcasestr.c
-  ${file_magic_SOURCE_DIR}/src/strlcat.c
-  ${file_magic_SOURCE_DIR}/src/strlcpy.c
-  ${file_magic_SOURCE_DIR}/src/vasprintf.c
-  ${file_magic_SOURCE_DIR}/src/fmtcheck.c
+  ${libmagic_SOURCE_DIR}/src/asctime_r.c
+  ${libmagic_SOURCE_DIR}/src/asprintf.c
+  ${libmagic_SOURCE_DIR}/src/ctime_r.c
+  ${libmagic_SOURCE_DIR}/src/dprintf.c
+  ${libmagic_SOURCE_DIR}/src/getline.c
+  ${libmagic_SOURCE_DIR}/src/gmtime_r.c
+  ${libmagic_SOURCE_DIR}/src/localtime_r.c
+  ${libmagic_SOURCE_DIR}/src/pread.c
+  ${libmagic_SOURCE_DIR}/src/strcasestr.c
+  ${libmagic_SOURCE_DIR}/src/strlcat.c
+  ${libmagic_SOURCE_DIR}/src/strlcpy.c
+  ${libmagic_SOURCE_DIR}/src/vasprintf.c
+  ${libmagic_SOURCE_DIR}/src/fmtcheck.c
   win-headers/magic.def
 )
 
 set(LIBMAGIC_SOURCE_FILES
   ${WIN_COMPAT_SOURCES}
-  ${file_magic_SOURCE_DIR}/src/apprentice.c
-  ${file_magic_SOURCE_DIR}/src/apptype.c
-  ${file_magic_SOURCE_DIR}/src/ascmagic.c
-  ${file_magic_SOURCE_DIR}/src/buffer.c
-  ${file_magic_SOURCE_DIR}/src/cdf.c
-  ${file_magic_SOURCE_DIR}/src/cdf_time.c
-  ${file_magic_SOURCE_DIR}/src/compress.c
-  ${file_magic_SOURCE_DIR}/src/der.c
-  ${file_magic_SOURCE_DIR}/src/encoding.c
-  ${file_magic_SOURCE_DIR}/src/fsmagic.c
-  ${file_magic_SOURCE_DIR}/src/funcs.c
-  ${file_magic_SOURCE_DIR}/src/is_csv.c
-  ${file_magic_SOURCE_DIR}/src/is_json.c
-  ${file_magic_SOURCE_DIR}/src/is_simh.c
-  ${file_magic_SOURCE_DIR}/src/is_tar.c
-  ${file_magic_BINARY_DIR}/magic.c
-  ${file_magic_SOURCE_DIR}/src/print.c
-  ${file_magic_SOURCE_DIR}/src/readcdf.c
-  ${file_magic_BINARY_DIR}/readelf.c
-#  ${file_magic_SOURCE_DIR}/src/seccomp.c
-  ${file_magic_SOURCE_DIR}/src/softmagic.c
+  ${libmagic_SOURCE_DIR}/src/apprentice.c
+  ${libmagic_SOURCE_DIR}/src/apptype.c
+  ${libmagic_SOURCE_DIR}/src/ascmagic.c
+  ${libmagic_SOURCE_DIR}/src/buffer.c
+  ${libmagic_SOURCE_DIR}/src/cdf.c
+  ${libmagic_SOURCE_DIR}/src/cdf_time.c
+  ${libmagic_SOURCE_DIR}/src/compress.c
+  ${libmagic_SOURCE_DIR}/src/der.c
+  ${libmagic_SOURCE_DIR}/src/encoding.c
+  ${libmagic_SOURCE_DIR}/src/fsmagic.c
+  ${libmagic_SOURCE_DIR}/src/funcs.c
+  ${libmagic_SOURCE_DIR}/src/is_csv.c
+  ${libmagic_SOURCE_DIR}/src/is_json.c
+  ${libmagic_SOURCE_DIR}/src/is_simh.c
+  ${libmagic_SOURCE_DIR}/src/is_tar.c
+  ${libmagic_BINARY_DIR}/magic.c
+  ${libmagic_SOURCE_DIR}/src/print.c
+  ${libmagic_SOURCE_DIR}/src/readcdf.c
+  ${libmagic_BINARY_DIR}/readelf.c
+#  ${libmagic_SOURCE_DIR}/src/seccomp.c
+  ${libmagic_SOURCE_DIR}/src/softmagic.c
 )
 
 # replace the version in the magic.h.in and write it to magic.h
-FILE(READ ${file_magic_SOURCE_DIR}/src/magic.h.in MAGIC_H_CONTENT)
+FILE(READ ${libmagic_SOURCE_DIR}/src/magic.h.in MAGIC_H_CONTENT)
 STRING(REPLACE "." "" FILE_VERSION_WITHOUT_DOT "${FILE_VERSION}")
 STRING(REPLACE "X.YY" ${FILE_VERSION_WITHOUT_DOT} MAGIC_H_CONTENT_NEW "${MAGIC_H_CONTENT}")
-FILE(WRITE ${file_magic_SOURCE_DIR}/src/magic.h "${MAGIC_H_CONTENT_NEW}")
+FILE(WRITE ${libmagic_SOURCE_DIR}/src/magic.h "${MAGIC_H_CONTENT_NEW}")
 
 
-FILE(READ ${file_magic_SOURCE_DIR}/src/readelf.c READELF_C_CONTENT)
+FILE(READ ${libmagic_SOURCE_DIR}/src/readelf.c READELF_C_CONTENT)
 STRING(CONCAT READELF_C_CONTENT_NEW "#include <dirent.h>\n" "${READELF_C_CONTENT}")
-FILE(WRITE ${file_magic_BINARY_DIR}/readelf.c "${READELF_C_CONTENT_NEW}")
+FILE(WRITE ${libmagic_BINARY_DIR}/readelf.c "${READELF_C_CONTENT_NEW}")
 
-FILE(READ ${file_magic_SOURCE_DIR}/src/magic.c MAGIC_C_CONTENT)
+FILE(READ ${libmagic_SOURCE_DIR}/src/magic.c MAGIC_C_CONTENT)
 STRING(CONCAT MAGIC_C_CONTENT_NEW "#include <dirent.h>\n" "${MAGIC_C_CONTENT}")
-FILE(WRITE ${file_magic_BINARY_DIR}/magic.c "${MAGIC_C_CONTENT_NEW}")
+FILE(WRITE ${libmagic_BINARY_DIR}/magic.c "${MAGIC_C_CONTENT_NEW}")
 
-if( NOT EXISTS ${file_magic_BINARY_DIR}/file.h.in )
-file(RENAME ${file_magic_SOURCE_DIR}/src/file.h ${file_magic_BINARY_DIR}/file.h.in)
+if( NOT EXISTS ${libmagic_BINARY_DIR}/file.h.in )
+file(RENAME ${libmagic_SOURCE_DIR}/src/file.h ${libmagic_BINARY_DIR}/file.h.in)
 endif()
 
-FILE(READ ${file_magic_BINARY_DIR}/file.h.in FILE_H_CONTENT)
+FILE(READ ${libmagic_BINARY_DIR}/file.h.in FILE_H_CONTENT)
 STRING(CONCAT FILE_H_CONTENT_NEW "#ifdef WIN32\n#include <unistd.h>\n#include <dirent.h>\n#undef S_IFLNK\n#undef S_IFSOCK\n#endif\n" "${FILE_H_CONTENT}")
-FILE(WRITE ${file_magic_SOURCE_DIR}/src/file.h "${FILE_H_CONTENT_NEW}")
+FILE(WRITE ${libmagic_SOURCE_DIR}/src/file.h "${FILE_H_CONTENT_NEW}")
 
 # patch test.c and include <getopt.h>
-FILE(READ ${file_magic_SOURCE_DIR}/tests/test.c TEST_C_CONTENT)
+FILE(READ ${libmagic_SOURCE_DIR}/tests/test.c TEST_C_CONTENT)
 STRING(CONCAT TEST_C_CONTENT_NEW "#include <getopt.h>\n" "${TEST_C_CONTENT}")
-FILE(WRITE ${file_magic_BINARY_DIR}/test.c "${TEST_C_CONTENT_NEW}")
+FILE(WRITE ${libmagic_BINARY_DIR}/test.c "${TEST_C_CONTENT_NEW}")
 
 
 set(PCRE2_USE_STATIC_LIBS ON)
 
 
-if( NOT EXISTS ${file_magic_SOURCE_DIR}/src/regex.h )
-file(DOWNLOAD https://raw.githubusercontent.com/PCRE2Project/pcre2/3f05f72081b24ee2830250e669d0113725437a70/src/pcre2posix.h ${file_magic_SOURCE_DIR}/src/regex.h)
+if( NOT EXISTS ${libmagic_SOURCE_DIR}/src/regex.h )
+file(DOWNLOAD https://raw.githubusercontent.com/PCRE2Project/pcre2/3f05f72081b24ee2830250e669d0113725437a70/src/pcre2posix.h ${libmagic_SOURCE_DIR}/src/regex.h)
 endif()
 
 
 add_definitions(-DHAVE_CONFIG_H -DVERSION="${FILE_VERSION}" -DWIN32_LEAN_AND_MEAN -DWIN32 -DPCRE2_STATIC )
 add_library(libmagic ${LIBMAGIC_SOURCE_FILES})
-target_include_directories(libmagic PUBLIC ${file_magic_SOURCE_DIR}/src PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/win-headers  ${CMAKE_CURRENT_SOURCE_DIR}/getopt)
+target_include_directories(libmagic PUBLIC ${libmagic_SOURCE_DIR}/src PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/win-headers  ${CMAKE_CURRENT_SOURCE_DIR}/getopt)
 target_link_libraries(libmagic PUBLIC dirent pcre2-posix shlwapi)
 
 
-add_executable(file ${file_magic_SOURCE_DIR}/src/file.c)
-target_include_directories(file PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/win-headers  ${file_magic_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/getopt)
+add_executable(file ${libmagic_SOURCE_DIR}/src/file.c)
+target_include_directories(file PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/win-headers  ${libmagic_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/getopt)
 target_link_libraries(file libmagic dirent pcre2-posix shlwapi)
 
 if(BUILD_TESTS)
-	add_executable(file_test ${file_magic_BINARY_DIR}/test.c)
+	add_executable(file_test ${libmagic_BINARY_DIR}/test.c)
 	target_link_libraries(file_test libmagic dirent pcre2-posix shlwapi)
 endif()
 
