--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,7 +152,7 @@ add_library(libmagic ${LIBMAGIC_SOURCE_FILES})
 target_include_directories(libmagic PUBLIC ${libmagic_SOURCE_DIR}/src PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/win-headers  ${CMAKE_CURRENT_SOURCE_DIR}/getopt)
 target_link_libraries(libmagic PUBLIC dirent pcre2-posix shlwapi)
 if(MSVC)
-	target_compile_definitions(libmagic BUILD_AS_WINDOWS_STATIC_LIBARAY=1)
+	target_compile_definitions(libmagic PUBLIC BUILD_AS_WINDOWS_STATIC_LIBARAY=1)
 endif()
 
 
